--- a/ourWebapp/src/main/webapp/css/main.css
+++ b/ourWebapp/src/main/webapp/css/main.css
@@ -1,5 +1,10 @@
 body {
 	display: block;
-	margin: 100px auto;
+	margin: auto;
 	width: 1000px;
+}
+
+.chart {
+	margin-left: 40px;
+    margin-top: 100px;
 }
