--- a/ourWebapp/src/main/webapp/css/main.css
+++ b/ourWebapp/src/main/webapp/css/main.css
@@ -6,5 +6,21 @@ body {
 
 .chart {
 	margin-left: 40px;
-    margin-top: 100px;
+    margin-top: 50px;
+}
+
+.chart:first-child {
+	margin-top: 110px;
+}
+
+#generic-time-chart g.stack._0  > rect.bar,
+#generic-time-chart .dc-legend .dc-legend-item:first-child rect {
+	stroke: none;
+    fill: #3182bd;
+}
+
+#generic-time-chart g.stack._1  > rect.bar,
+#generic-time-chart .dc-legend .dc-legend-item:last-child rect {
+	stroke: none;
+    fill: #9ecae1;
 }
