--- a/ourWebapp/src/main/webapp/css/main.css
+++ b/ourWebapp/src/main/webapp/css/main.css
@@ -97,3 +97,9 @@ a:hover {
 	text-decoration: none;
 	cursor: pointer;
 }
+
+#harta_cluj svg {
+	margin-left: 70px;
+	margin-top: 60px;
+	offset: visible;
+}
