--- a/ourWebapp/src/main/webapp/css/main.css
+++ b/ourWebapp/src/main/webapp/css/main.css
@@ -10,7 +10,6 @@ section#body {
 }
 
 header label {
-    font-weight: normal;
     margin-right: 5px;
     margin-top: 6px;
     color: #999;
@@ -18,7 +17,18 @@ header label {
     font-style: italic;
     font-weight: normal;
 }
-    
+
+header .page-title {
+	float: left;
+    margin-left: 100px;
+    margin-top: 6px;
+    color: #999;
+    font-size: 16px;
+    font-style: italic;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
 header .bubble-link {
 	display: block;
 	width: 30px;
