--- a/ourWebapp/src/main/webapp/css/main.css
+++ b/ourWebapp/src/main/webapp/css/main.css
@@ -1,3 +1,12 @@
+body{
+position : relative;
+font-family: Sans-serif !important;
+}
+
+h3{
+	font-family: Sans-serif !important;
+}
+
 header {
 	height: 30px;
 	background-color: #F4F4F4;	
@@ -7,6 +16,7 @@ section#body {
 	display: block;
 	margin: auto;
 	width: 1000px;
+	padding-bottom : 150px;
 }
 
 header label {
